--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-lg" style="background-color: #131212">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="Images/LogoLogo.svg" alt="" width="80" height="40" /> </a>
+        <a class="navbar-brand" href="#"><img src="Images/LogoLogo.svg" alt="" width="80" height="40"/> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,10 +40,10 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="Images/foto.jpg" alt="Tarsisius Risto Ardianto" width="200" class="rounded-circle border border-dark" />
+      <img src="Images/foto.jpg" alt="Tarsisius Risto Ardianto" width="175" class="rounded-circle border border-dark" />
       <h1 class="display-10">Tarsisius Risto Ardianto</h1>
       <p class="lead">Mahasiswa Informatika</p>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 300">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1100 300">
         <path
           fill="#273036"
           fill-opacity="10"
@@ -54,7 +54,30 @@
     <!-- Akhir Jumbotron -->
 
     <!-- Tentang -->
-    <section></section>
+    <section id="tentang" style="background-color: #F2AA4C;">
+      <div class="container-xxl">
+        <div class="row text-center pb-5">
+          <div class="col">
+            <h2>Tentang</h2>
+          </div>
+        </div>
+        <div class="row justify-content-between fs-5 text-center">
+          <div class="col-5">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi accusantium magni expedita iste illum placeat repellat veritatis voluptatum dolorem eum.</p>
+          </div>
+          <div class="col-5">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi accusantium magni expedita iste illum placeat repellat veritatis voluptatum dolorem eum.</p>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 850 300">
+        <path
+          fill="#273036"
+          fill-opacity="10"
+          d="M0,288L48,277.3C96,267,192,245,288,245.3C384,245,480,267,576,256C672,245,768,203,864,181.3C960,160,1056,160,1152,154.7C1248,149,1344,139,1392,133.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
 
     <!-- Akhir Tentang -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
