--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   </head>
   <body>
     <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg" style="background-color: #131212">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="Images/LogoLogo.svg" alt="" width="80" height="40"/> </a>
+        <a class="navbar-brand" href="#"><img src="Images/LogoLogo.svg" alt="" width="80" height="40" /> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home </a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Tentang</a>
@@ -54,19 +54,19 @@
     <!-- Akhir Jumbotron -->
 
     <!-- Tentang -->
-    <section id="tentang" style="background-color: #F2AA4C;">
+    <section id="tentang">
       <div class="container-xxl">
         <div class="row text-center pb-5">
           <div class="col">
             <h2>Tentang</h2>
           </div>
         </div>
-        <div class="row justify-content-between fs-5 text-center">
-          <div class="col-5">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi accusantium magni expedita iste illum placeat repellat veritatis voluptatum dolorem eum.</p>
+        <div class="row justify-content-between fs-4 font-monospace">
+          <div class="col-xxl-5">
+            <p>Halo, nama saya Tarsisius Risto Ardianto, saya Mahasiswa Informatika dari Universitas Sanata Dharma saat ini saya lagi berusaha belajar HTML</p>
           </div>
-          <div class="col-5">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi accusantium magni expedita iste illum placeat repellat veritatis voluptatum dolorem eum.</p>
+          <div class="col-xxl-5">
+            <p>Untuk meraih apa yang benar benar kamu inginkan, fokus saja tidak cukup. Kamu harus memiliki rasa lapar untuk meraihnya</p>
           </div>
         </div>
       </div>
@@ -80,6 +80,29 @@
     </section>
 
     <!-- Akhir Tentang -->
+
+    <!-- Kontak -->
+    <section id="kontak">
+      <div class="container">
+        <div class="row text-center pb-5">
+          <div class="col">
+            <h2>Kontak</h2>
+          </div>
+          <!-- <div class="gambarKontak">
+            <img src="Images/Kontak.png" alt="" />
+          </div> -->
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1070 300">
+        <path
+          fill="#273036"
+          fill-opacity="10"
+          d="M0,288L48,277.3C96,267,192,245,288,245.3C384,245,480,267,576,256C672,245,768,203,864,181.3C960,160,1056,160,1152,154.7C1248,149,1344,139,1392,133.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Kontak -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
