--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
   </head>
   <body>
     <!-- NavBar -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
-      <div class="container">
-        <a class="navbar-brand" href="#">Tarsisius Risto </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto text-dark">
-            <li class="nav-item text-dark">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#tentang">Tentang</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#resume">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#kontak">Kontak</a>
-            </li>
-          </ul>
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-2">
+        <div class="container">
+          <a class="navbar-brand" href="#">TR</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle Navbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto fw-bolder">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#tentang">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#resume">Resume</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#kontak">Kontak</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
     </nav>
     <!-- Akhir NavBar -->
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <!-- <img src="Images/Photo.svg" alt="" width="150" class="rounded" /> -->
-      <h1 class="display-10" style="font-style: Poppins">Tarsisius Risto Ardianto</h1>
+      <h1 class="display-10 m-2" style="font-style: Poppins">Tarsisius Risto Ardianto</h1>
       <p class="lead">Mahasiswa Informatika</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1100 300">
         <path
@@ -61,7 +61,7 @@
       <div class="container-md">
         <div class="row text-center pb-5">
           <div class="col">
-            <h2>Tentang</h2>
+            <h2 class="TitleTentang">Tentang</h2>
           </div>
         </div>
         <div class="row justify-content-between fs-4 font-monospace">
@@ -81,7 +81,6 @@
         ></path>
       </svg>
     </section>
-
     <!-- Akhir Tentang -->
 
     <!-- Kontak -->
@@ -105,16 +104,17 @@
       </svg>
     </section>
     <!-- Akhir Kontak -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script>
-      var nav=document.querySelector('nav');
-      window.addEventListener('scroll', function(){
-          if(window.pageYOffset > 100){
-              nav.classList.add('bg-dark', 'shadow');
-          }else{
-              nav.classList.remove('bg-dark','shadow');
-          }
-      })
-  </script>
+   <script>
+        var nav=document.querySelector('nav');
+        window.addEventListener('scroll', function(){
+            if(window.pageYOffset > 100){
+                nav.classList.add('bg-dark', 'shadow');
+            }else{
+                nav.classList.remove('bg-dark','shadow');
+            }
+        })
+    </script>
   </body>
 </html>
